[package]
name = "dodowork"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9.2"
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenv = "0.15"
env_logger = "0.11.8"
futures-util = "0.3" 