[package]
name = "dodowork"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9.2"
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal"] }
dotenv = "0.15"
env_logger = "0.11.8"
futures-util = "0.3" 
thiserror = "2.0.12"
log = "0.4"
rust_decimal = { version = "1.37.1", features = ["serde", "db-postgres"] }


[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
actix-http = "3.11.0"